--- a/package.json
+++ b/package.json
@@ -5,18 +5,19 @@
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
-    "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
-    "@fortawesome/free-brands-svg-icons": "^5.1.0-11",
-    "@fortawesome/free-regular-svg-icons": "^5.1.0-11",
-    "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-brands-svg-icons": "^5.5.0",
+    "@fortawesome/free-regular-svg-icons": "^5.5.0",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "0.1.0-11",
+    "bcrypt": "^3.0.2",
     "escape-string-regexp": "^1.0.5",
     "google-maps-react": "^2.0.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "react-fontawesome": "^1.6.1",
     "react-google-maps": "^9.4.5",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^2.1.1",
     "recompose": "^0.27.1"
   },
   "scripts": {
